--- a/assets/www/views/orders/detailOrder.html
+++ b/assets/www/views/orders/detailOrder.html
@@ -39,7 +39,7 @@
                     <span data-bind='text: quantity'></span>
                 </td>
                 <td>
-                    <strong><span data-bind="text: subtotal"></span></strong>
+                    <strong><span data-bind="text: subtotal.toFixed(2)"></span></strong>
                 </td>                
             </tr>
         </tbody>
