--- a/assets/www/views/initial_configuration/clients.html
+++ b/assets/www/views/initial_configuration/clients.html
@@ -18,7 +18,12 @@
     <tr>
       <th>Clave del cliente</th>
       <th>Nombre del cliente</th>
-      <th>Limite</th>
+      <th>Dirección</th>
+      <th>Población</th>
+      <th>Entidad</th>
+      <th>Colonia</th>
+      <th>C.P.</th>      
+      <th>Límite</th>
       <th>Ruta</th>
       <th>Activo</th>
       <th>Última visita</th>
@@ -28,6 +33,11 @@
     <tr>      
       <td><p data-bind="text: IdClient"></p></td>
       <td><p data-bind="text: nameClient"></p></td>
+      <td><p data-bind="text: direction"></p></td>
+      <td><p data-bind="text: poblation"></p></td>
+      <td><p data-bind="text: entity"></p></td>
+      <td><p data-bind="text: colony"></p></td>
+      <td><p data-bind="text: cp"></p></td>      
       <td><p data-bind="text: limit"></p></td>
       <td><p data-bind="text: route"></p>      </td>
       <td><span data-bind="visible: Active" class="glyphicon glyphicon-ok"></span></td>
