--- a/assets/www/views/orders/newOrder.html
+++ b/assets/www/views/orders/newOrder.html
@@ -8,6 +8,7 @@ Población: <b id="entity"></b><br />
 Colonia: <b id="colony"></b><br />
 C.P.: <b id="cp"></b><br />
 Municipio: <b>Michoácan</b><br />
+<strong>Límite: </strong><strong id="limit"></strong>
 
 
 <br />
