--- a/assets/www/views/clients/ticketsDetail.title.html
+++ b/assets/www/views/clients/ticketsDetail.title.html
@@ -1,5 +1,5 @@
 <a id="backHomePhone"><h2 class="visible-phone hidden-tablet hidden-desktop">DISA</h2></a>
 <a id="backHomeTablet"><h2 class="visible-tablet visible-desktop hidden-phone">DISA</h2></a>
 <div class="pull-right">
-	<button class="btn btn-primary" id="syncClients"> Sincronizar </button>
+	<button class="btn btn-primary" id="syncDetails"> Sincronizar </button>
 </div>
