--- a/assets/www/views/orders/clients.html
+++ b/assets/www/views/orders/clients.html
@@ -3,25 +3,42 @@
 <br />
 <h2>Clientes</h2>
 <p>Seleccione un cliente para hacer el pedido.</p>
-<table id="noRecordsFound" class="table table-striped table-bordered"
-  style="display: none;">
+<table class="table table-striped" data-bind='visible: clients().length > 0'>
   <thead>
     <tr>
-      <th>No hay clientes</th>
-    </tr>
-  </thead>
-</table>
-<div id="repeatModel">
-<table class="table table-striped">
-  <thead>
-    <tr>      
-      <th>Seleccionar cliente</th>
+      <th>Clave del cliente</th>
       <th>Nombre del cliente</th>
-      <th>Limite</th>
-      <th>Ruta</th>      
+      <th>Dirección</th>
+      <th>Población</th>
+      <th>Entidad</th>
+      <th>Colonia</th>
+      <th>C.P.</th>      
+      <th>Límite</th>
+      <th>Ruta</th>
+      <th>Activo</th>
+      <th>
+        Seleccionar
+      </th>
     </tr>
   </thead>  
-  <tbody id="bodyTable">    
+  <tbody data-bind="foreach: clients">
+    <tr>      
+      <td><b data-bind="text: idClient"></b></td>
+      <td><p data-bind="text: nameClient"></p></td>
+      <td><p data-bind="text: direction"></p></td>
+      <td><p data-bind="text: poblation"></p></td>
+      <td><p data-bind="text: entity"></p></td>
+      <td><p data-bind="text: colony"></p></td>
+      <td><p data-bind="text: cp"></p></td>      
+      <td><p data-bind="text: creditLimit"></p></td>
+      <td><p data-bind="text: route"></p></td>
+      <td><span data-bind="visible: active" class="glyphicon glyphicon-ok"></span></td>
+      <td>        
+          <button class="btn btn-primary" type="button" data-bind="click: detailReports">
+            <span class="glyphicon glyphicon-check"></span>
+          </button>
+      </td>
+    </tr>
   </tbody>
 </table>
 
