--- a/assets/www/views/configuration/index.html
+++ b/assets/www/views/configuration/index.html
@@ -25,7 +25,7 @@
 		<tbody>
 			<tr>
 				<td width="85%">
-					<input type="text" placeholder="XXXX-XXXX-XXXX-XXXX" class="span3" id="guidUser" value="">
+					<input type="text" placeholder="XXXX-XXXX-XXXX-XXXX" class="span3" id="guidUser">
 					<button class="btn btn-success" id="confirm">Confirmar</button>
 				</td>
 				<td width="15%" class="pagination-centered">					
