Sync checked orders

--- a/assets/www/views/orders/checkOrders.title.html
+++ b/assets/www/views/orders/checkOrders.title.html
@@ -1,5 +1,5 @@
 <div class="btn-group pull-right">
-	<button class="btn btn-primary" id="syncOrders">Sincronizar</button>
+	<button class="btn btn-primary" id="syncOrders" data-loading-text="Sincronizando" autocomplete="off">Sincronizar</button>
 </div>
 <a id="backHomePhone"><h2 class="visible-phone hidden-tablet hidden-desktop">DISA</h2></a>
 <a id="backHomeTablet"><h2 class="visible-tablet visible-desktop hidden-phone">DISA</h2></a>
