--- a/assets/www/views/orders/checkOrders.html
+++ b/assets/www/views/orders/checkOrders.html
@@ -15,6 +15,7 @@
 <table data-bind='visible: sells().length > 0' class="table table-striped table-bordered" style="display: none;">
 	<thead>
 		<tr>
+			<th></th>
 			<th>Id</th>
 			<th>Nombre del cliente</th>
 			<th>Total</th>
@@ -25,6 +26,9 @@
 	</thead>
 	<tbody data-bind='foreach: sells'>
 		<tr>
+			<td>
+				<input type="checkbox" name="synchronize" data-bind="checked: listSyncSells, disabled: synchronized" />
+			</td>
 			<td data-bind="text: id"></td>
 			<td data-bind="text: nameClient"></td>
 			<td data-bind="text: total"></td>
@@ -37,7 +41,9 @@
 					</button>
 				</div>
 			</td>
-			<td><span data-bind="visible: synchronized" class="glyphicon glyphicon-ok"></span></td>
+			<td>
+				<span data-bind="visible: synchronized" class="glyphicon glyphicon-ok"></span>
+			</td>
 		</tr>
 	</tbody>
 </table>
