--- a/assets/www/views/clients/ticketsDetail.html
+++ b/assets/www/views/clients/ticketsDetail.html
@@ -36,8 +36,8 @@
 <br /> 
 <br /> 
 
-$<input type="number" class="col-sm-1" id="payment">
-<button class="btn btn-success">Abonar  <span class="glyphicon glyphicon-credit-card"></span></button>
+$<input type="number" class="col-sm-1" id="payment" placeholder="$ Cantidad a pagar...">
+<button class="btn btn-success" id="paymentToTicket">Abonar  <span class="glyphicon glyphicon-credit-card"></span></button>
 
 <script type="text/javascript" charset="utf-8"
   src="file:///android_asset/www/js/views/clients/ticketsDetailCoreSync.functions.js"></script>
