--- a/assets/www/views/orders/checkOrders.html
+++ b/assets/www/views/orders/checkOrders.html
@@ -27,7 +27,7 @@
 	<tbody data-bind='foreach: sells'>
 		<tr>
 			<td>
-				<input type="checkbox" name="synchronize" data-bind="click: $root.listSyncSells" />
+				<input type="checkbox" name="selected" data-bind="click: $root.listSyncSells, checkedValue: synchronized, disabled: synchronized" />
 			</td>
 			<td data-bind="text: id"></td>
 			<td data-bind="text: nameClient"></td>
