--- a/assets/www/views/clients/collect.html
+++ b/assets/www/views/clients/collect.html
@@ -18,7 +18,7 @@
 			<td><span data-bind="text: nameClient"></span></td>			
 			<td><span data-bind="text: num_Fact"></span></td>
 			<td>$<span data-bind="text: amount"></span></td>
-			<td><span data-bind="text: timestamp"></span></td>
+			<td><span data-bind="text: timestampp"></span></td>
 		</tr>
 	</tbody>
 </table>
