--- a/assets/www/views/clients/tickets.html
+++ b/assets/www/views/clients/tickets.html
@@ -26,7 +26,7 @@
       <td><span data-bind="text: amount"></span></td>
       <td><span data-bind="text: paid"></span></td>
       <td><span data-bind="text: expiration"></span> <span>día(s) </span></td>
-      <td><span data-bind="text: timestamp"></span></td>      
+      <td><span data-bind="text: timestampp"></span></td>      
       <td>        
           <button class="btn btn-primary" type="button" data-bind="click: detailReports">
             <span class="glyphicon glyphicon-check"></span>
