--- a/assets/www/views/initial_configuration/clients.html
+++ b/assets/www/views/initial_configuration/clients.html
@@ -41,7 +41,7 @@
       <td><p data-bind="text: limit"></p></td>
       <td><p data-bind="text: route"></p>      </td>
       <td><span data-bind="visible: Active" class="glyphicon glyphicon-ok"></span></td>
-      <td><b data-bind="text: timestamp"></b></td>
+      <td><b data-bind="text: timestampp"></b></td>
     </tr>
   </tbody>
 
