--- a/assets/www/views/initial_configuration/license.html
+++ b/assets/www/views/initial_configuration/license.html
@@ -4,7 +4,7 @@
 <h1>Código de Vendedor</h1>
 <div id="divForm-Group">
   <label class="control-label" for="license">Licencia:</label>
-  <input type="number" class="form-control" id="license" placeholder="xxxxxx-xxx-xxx-xxxxx-xxxxxxxxx" value="">
+  <input type="number" class="form-control" id="license" placeholder="xxxxxx" value="">
   <span id="icon"></span>
 </div>
 
