--- a/assets/www/views/initial_configuration/products.title.html
+++ b/assets/www/views/initial_configuration/products.title.html
@@ -1,5 +1,5 @@
 <div class="btn-group pull-right">
-	<button type="button" class="btn btn-primary" id="next">Siguiente</button>
+	<button id="next" type="button" class="btn btn-primary" disabled="disabled">Siguiente</button>
 </div>
 <h2 class="visible-phone hidden-tablet hidden-desktop">DISA</h2>
 <h2 class="visible-tablet visible-desktop hidden-phone">DISA</h2>
