--- a/assets/www/views/reports/index.html
+++ b/assets/www/views/reports/index.html
@@ -22,7 +22,7 @@
 	<tbody data-bind='foreach: reports'>
 		<tr>
 			<td data-bind="text: id"></td>
-			<td data-bind="text: timestamp"></td>
+			<td data-bind="text: timestampp"></td>
 			<td>
 				<div class="btn-group">
 					<button class="btn btn-primary" type="button"
