--- a/assets/www/views/clients/ticketsDetail.html
+++ b/assets/www/views/clients/ticketsDetail.html
@@ -24,7 +24,7 @@
       <td><b data-bind="text: id"></b></td>
       <td><p data-bind="text: num_Fact"></p></td>
       <td><p data-bind="text: paid"></p></td>      
-      <td><p data-bind="text: timestamp"></p></td>      
+      <td><p data-bind="text: timestampp"></p></td>      
     </tr>
   </tbody>
 </table>
