--- a/assets/www/views/initial_configuration/clients.title.html
+++ b/assets/www/views/initial_configuration/clients.title.html
@@ -1,5 +1,5 @@
-<div class="btn-group pull-right" id="buttonNext">
-	<button type="button" class="btn btn-primary" id="next" hidden>Siguiente</button>
+<div class="btn-group pull-right">
+	<button id="next" type="button" class="btn btn-primary" hidden disabled="disabled">Siguiente</button>
 </div>
 <h2 class="visible-phone hidden-tablet hidden-desktop">DISA</h2>
 <h2 class="visible-tablet visible-desktop hidden-phone">DISA</h2>
