--- a/assets/www/views/clients/index.html
+++ b/assets/www/views/clients/index.html
@@ -32,7 +32,7 @@
       <td><p data-bind="text: cp"></p></td>      
       <td><p data-bind="text: creditLimit"></p></td>
       <td><p data-bind="text: route"></p></td>
-      <td><span data-bind="visible: active" class="glyphicon glyphicon-ok"></span></td>
+      <td><span data-bind="visible: Active" class="glyphicon glyphicon-ok"></span></td>
       <td>
         <div class="btn-group">
           <button class="btn btn-primary" type="button" data-bind="click: checkTickets">
